[package]
name = "astrum"
version = "0.1.0"
license = "MIT"
edition = "2021"

[dependencies]
color-eyre = "0.6.3"
crossterm = { version = "0.28.1", features = ["serde"] }
derive_more = { version = "2.0.1", features = ["from", "deref"] }
dirs = "6.0.0"
expect-test = "1.5.1"
immutable-map = "0.1.2"
log = "0.4.28"
ratatui = { version = "0.29.0", features = ["all-widgets"] }
serde-lexpr = "0.1.3"
serde = { version = "1.0.228", features = ["derive"] }
snafu = "0.8.9"
